--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@ main{
     align-self: baseline;
 }
 
-/* #group ul{
-    margin-bottom: 20px;
-} */
+#groups ul{
+    border: 1px solid;
+    display: inline-block;
+    padding: 1rem;
+    margin: 1rem;
+    list-style: none;
+}
