--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,47 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
-    background-color: #ececec;
+    background-color: #f5f7f6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-image: url("../img/blob.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
 main{
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+    gap: 50px;
+    background-color: #f9fafc;
+    width: 70%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, .1);
+    border-radius: 10px;
 }
+
+.app button{
+    background-color: #348ff9;
+    color: #fff;
+    border: none;
+    padding: 7px 14px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: .4s;
+}
+.app button:hover{
+    background-color: aqua;
+}
+
 
 #createBtn{
     align-self: baseline;
