--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 body{
@@ -13,8 +17,9 @@ body{
     background-image: url("../img/blob.png");
     background-repeat: no-repeat;
     background-position: center;
-    font-size: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif
+    color: #1c1f26;
+    font-size: 18px;
+    font-family:'Roboto', sans-serif;
 }
 
 main{
@@ -37,20 +42,63 @@ main{
     border-radius: 5px;
     cursor: pointer;
     transition: .4s;
+    margin-top:10px ;
 }
 .app button:hover{
     background-color: aqua;
 }
-
-
 #createBtn{
     align-self: baseline;
 }
-
 #groups ul{
     border: 1px solid;
     display: inline-block;
     padding: 1rem;
     margin: 1rem;
     list-style: none;
+}
+input{
+    padding: 7px 14px;
+    border-radius: 5px;
+    border: 1px solid aqua;
+    margin: 8px 0px;
+    font-size: 16px;
+        
+}
+input:focus{
+    outline: 2px solid aqua;
+}
+#nombresContainer{
+       border: 1px solid aqua ;
+       padding: 20px;
+       margin-top: 10px;
+       display: flex;
+       flex-wrap: wrap;
+       gap: 10px;
+}
+
+#resultadoGrupos{
+    display: flex;
+    gap: 10px;
+    font-size: 16px;
+}
+.gruposSeparado{
+    border: 1px solid aqua;
+    padding: 12px;
+    margin-top: 10px;
+    background-color: #348ff9;
+    color: white;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+#totalGrupos{
+    padding: 10px;
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: bolder;
+   
+}
+.tituloGrupo{
+    font-weight: bold;
 }
